Tue Mar 21 19:14:49 1995 Keith Vetter (keithv@fusion.com)

	* fcc_destroy.c: open file on the PC in binary mode, worked around
           the unixism of working with deleted files.
        * fcc_genn.c: open file on the PC in binary mode.
        * fcc_init.c: uninitialized variable on the PC.
        * fcc_maybe.c: open file on the PC in binary mode.
        * fcc_read.c: a real clever one-line piece of code to turn 4 bytes 
           into a 32 bit integer fails miserbly on 16 bit machines. Fixed.
        * fcc_ops.c: added hooks to notify programs when the ccache changes.
           For windows, the code is taken from the K4 release, for other
           platforms it does nothing.
        * fcc_destroy.c, fcc_genn.c, fcc_init.c, fcc_store.c: added calls to
           the hook described for fcc_ops.c.

Fri Mar 17 19:23:09 1995  John Gilmore  (gnu at toad.com)

	* Makefile.in (LDFLAGS):  Eliminate, duplicates config/pre.in.

Wed Mar 15 12:07:28 1995 Keith Vetter (keithv@fusion.com)

	* fcc_eseq.c, fcc_init.c, fcc_maybe.c, fcc_dest.c:
	   Initialized return code.
	* fcc_genn.c, fcc_init.c: removed chmod call for the PC

Thu Mar 09 18:43:10 1995  Chris Provenzano (proven@mit.edu)

	* fcc_destry.c (krb5_fcc_destroy())
	* fcc_init.c   (krb5_fcc_initialize())
		Initialize kret before returning it.

	* fcc_maybe.c (fcc_lock_file()) Initialize st before returning it.

Tue Mar  7 19:54:48 1995  Mark Eichin  <eichin@cygnus.com>

	* configure.in: take out ISODE_DEFS.

Tue Mar 7 15:58:15 1995 Keith Vetter (keithv@fusion.com)

	* fcc.h: alwas pull in low-level i/o stuff for the PC.
        * *.c, fcc-proto.h: added windows INTERFACE keyword.
        * fcc_dest.c, fcc_init.c, fcc_maybe.c, fcc_nseq.c, fcc_read.c, 
           fcc_sseq.c, fcc_write.c: fixed up some int/long and 
           signed/unsigned problems.

Tue Feb 28 00:35:55 1995  John Gilmore  (gnu at toad.com)

	* fcc.h, fcc_gennew.c, fcc_maybe.c:  Avoid <krb5/...> includes.
